@@ -5,6 +5,7 @@ phpMyAdmin - ChangeLog
 - patch #3404173 InnoDB comment display with tooltips/aliases
 - bug #3404886 [navi] Edit SQL statement after error
 - bug #3403165 [interface] Collation not displayed for long enum fields
+- bug #3399951 [export] Config for export compression not used
 
 3.4.5.0 (not yet released)
 - bug #3375325 [interface] Page list in navigation frame looks odd
